# hrs-angular-python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  observability.py
docs/: architecture.md  requirements.md  vision.md
frontend/: package.json
infra/: docker-compose.yml
infra/cdk/: app.py  cdk.json  pyproject.toml
infra/cdk/stacks/: hrs_stack.py
infra/cdk/tests/: test_stack_synth.py
